--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
       run: mvn -B package --file pom.xml
   publish-docker-image:
     name: Publish to Docker Registry
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [build]
     
     steps:
