--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Login to Docker Registry
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} registry.parlantos.com
       - name: Build Container image
-        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+        run: >
+          docker build --build-arg SNOWFLAKE_BASE_URL=${{ secrets.SNOWFLAKE_BASE_URL}} --build-arg POSTGRES_URL=${{secrets.POSTGRES_URL }}
+          --build-arg POSTGRES_USERNAME=${{ POSTGRES_USERNAME }} --build-arg POSTGRES_PASSWORD=${{ POSTGRES_PASSWORD }} --build-arg OKTA_TOKEN=${{OKTA_TOKEN}}
+          --build-arg OKTA_ORG_URL=${{OKTA_ORG_URL}} --build-arg OKTA_ISSUER=${{OKTA_ISSUER}} --build-arg OKTA_CLIENTID=${{OKTA_CLIENTID}} --build-arg OKTA_CLIENTSECRET=${{OKTA_CLIENTSECRET}}   
+          -t ${{ secrets.DOCKER_REPO }}:latest .
       - name: Publish Docker image
         run: docker push ${{ secrets.DOCKER_REPO }}
